# docker-nanoserver-msvc-winsdk

./: .dockerignore  .gitignore  Dockerfile
.github/workflows/: main.yml
cmake/: winsdk-msvc-toolchain.cmake
cni/: setup-nat.ps1
docker/: mount.dockerfile  xcache.dockerfile
git/: git-submodule.ps1
redist/: msvc.ps1
tests/: CMakeLists.txt  CMakePresets.json
tests/include/: nanomsvc.hpp
tests/src/: CMakeLists.txt  main.cpp  nanomsvc.cpp
wsl/: setup-wsl.ps1  wait-for-daemon.ps1
